correction of the loading spinner position at the end (z-index) and position during the animation (position: fixed)

--- a/sass/05-Pages/_accueil.scss
+++ b/sass/05-Pages/_accueil.scss
@@ -1,5 +1,5 @@
 .loading-spinner{
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     bottom: 0;
@@ -112,6 +112,7 @@
     }
     100%{
         opacity: 0;
+        z-index: -3;
     }
 }
 
